@@ -8,6 +8,8 @@ Date: ???
     - Add item name to interface sub-heading
     - Attempts to work out the correct item when using 'Control + Shift + Click' on recipes or entities that do not match their item names
     - Improved 'Entity' search for (modded) entities whose names do not match their item names
+  Bugfixes:
+    - Fixed highlight boxes not being removed when clearing search (with right-click)
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
 Date: 26 April 2022
